--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -20,8 +20,8 @@
 }
 .about{
   margin-top:10%;
-  font-family:'Courier New';
-  font-size:14px;
+  font-family:'Times New Roman';
+  font-size:18px;
   background-color:#9ea9b6;
   border-radius:25px;
   padding:15px;
@@ -29,8 +29,8 @@
 }
 .about2{
   margin-top:10%;
-  font-family:'Courier New';
-  font-size:12px;
+  font-family:'Times New Roman';
+  font-size:16px;
   background-color:#aaa4b9;
   border-radius:25px;
   padding:15px;
@@ -38,26 +38,30 @@
 }
 .about3{
   margin-top:10%;
-  font-family:'Courier New';
-  font-size:12px;
+  font-family:'Times New Roman';
+  font-size:18px;
   background-color:#c6adb2;
   border-radius:25px;
   padding:15px;
 
 }
 .baslik{
-  font-family: 'Oswald';
-  font-size: 16px;
+  font-family: 'Times New Roman';
+  font-size: 20px;
+  font-weight: bold;
 }
 .tür{
-  font-family: 'Arapey';
+  font-family: 'Times New Roman';
   font-style: italic;
+  font-weight: bold;
 }
 .yer{
-  font-family: 'Quicksand';
-  font-size: 10px;
+  font-family: 'Times New Roman';
+  font-size: 14px;
+  font-style: italic;
 }
 .zaman{
-  font-family:'Arapey';
-  font-size: 10px;
+  font-family:'Times New Roman';
+  font-size: 14px;
+  font-style: italic;
 }
